# ttx-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
macros/src/: lib.rs
src/: chip.rs  chip_test.rs  kernel.rs  lib.rs  loader.rs
src/chip/: blackhole.rs  dma.rs  field.rs  grayskull.rs  noc.rs  wormhole.rs
src/chip/blackhole/: arc.rs  noc_endpoints.rs  pci_noc.rs  telemetry.rs
src/chip/grayskull/: arc.rs  noc_endpoints.rs
src/chip/wormhole/: arc.rs  noc_endpoints.rs
src/loader/: blackhole.rs  grayskull.rs  wormhole.rs
src/runtime/: firmware.rs  mod.rs  workload.rs
src/runtime/firmware/: gen.rs
src/runtime/workload_link/: blackhole-kernel.x  blackhole.x  grayskull.x  wormhole-kernel.x
tensix-builder/: Cargo.toml  build.rs
tensix-builder/src/: lib.rs
tensix-builder/target_def/: blackhole.json  grayskull.json  wormhole.json
tests/: chip_test.rs  hello_world.rs  noc.rs
