[package]
name = "ttx-rs"
version = "0.2.0"
edition = "2021"

[dependencies]
luwen = {path = "../luwen"}
tensix-builder = {path = "./tensix-builder"}
macros = {path = "./macros"}

goblin = "0.8.2"
tracing = "0.1.41"
thiserror = "2.0.9"
num-derive = "0.4.2"
num-traits = "0.2.19"
tempfile = "3.20.0"

[dev-dependencies]
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
ctor = "0.4.2"
